--- a/timestamp-microservice/package.json
+++ b/timestamp-microservice/package.json
@@ -10,16 +10,8 @@
     "build": "npm run clean && mkdir dist && babel server -s -d dist",
     "production": "npm run build && nodemon bin/production"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/DmsChrisPena/babel-nodejs-setup.git"
-  },
-  "author": "",
+  "author": "Tomasz Galina",
   "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/DmsChrisPena/babel-nodejs-setup/issues"
-  },
-  "homepage": "https://github.com/DmsChrisPena/babel-nodejs-setup#readme",
   "devDependencies": {
     "babel-cli": "^6.22.2",
     "babel-preset-es2015": "^6.22.0",
@@ -30,6 +22,7 @@
   },
   "dependencies": {
     "express": "^4.16.3",
-    "mongoose": "^5.0.10"
+    "mongoose": "^5.0.10",
+    "unix-timestamp": "^0.2.0"
   }
 }
