--- a/timestamp-microservice/package.json
+++ b/timestamp-microservice/package.json
@@ -22,7 +22,7 @@
   },
   "dependencies": {
     "express": "^4.16.3",
-    "mongoose": "^5.0.10",
-    "unix-timestamp": "^0.2.0"
+    "moment": "^2.21.0",
+    "mongoose": "^5.0.10"
   }
 }
